--- a/index.css
+++ b/index.css
@@ -2,7 +2,8 @@
     background-color: #0000ffb5;
     display: flex;
     justify-content: space-between;
-    padding: 15px 50px;
+  
+
     /* background-image: linear-gradient( to right, yellow,green); */
 
 
@@ -12,10 +13,13 @@
     list-style: none;
     
 }
-.main-head .list a{
+.div .list li a{
     color: #FFF;
-    padding: 10px 40px;
+    /* padding: 5px 20px; */
     text-decoration: none;
+    padding: 15px;
+   
+   
 }
 .div{
     align-items: center;
@@ -32,18 +36,19 @@
 
 
 .main-body{
-    background-image: linear-gradient(rgb(0 157 255 / 0%),rgb(0 0 255 / 87%)),url(./../images/banner_image.jpg);
+    background-image: linear-gradient(rgb(0 157 255 / 0%),rgb(0 0 255 / 87%)),url(./images/banner_image.jpg);
     background-position: center;
     padding-top: 120px;
     padding-bottom: 200px;
     text-align: center;
     color:white;
-    padding-right: 100px;
-    padding-left:100px;
+    /* padding-right: 100px; */
+    /* padding-left:100px; */
     font-style: italic;
     font-variant: all-small-caps;
     font-family: cursive;
     word-spacing: 20px;
+    
 
     
 
@@ -54,7 +59,7 @@
 }
 body{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size:xx-large;
+    font-size:medium;
     font-weight: bold;
     margin: 0px;
     /* background-color: rgba(0, 47, 255, 0.953); */
@@ -86,7 +91,7 @@ section p{
 .owner{
     text-align: center;
     background-color: rgba(100, 27, 0, 0.321);
-    padding-top: 50px;
+    padding-top: 20px;
    }    
 .head{
     text-transform: capitalize;
@@ -142,8 +147,9 @@ section p{
 
 .full{
     text-align: center;
-    background-image: linear-gradient(rgba(255, 0, 0, 0.421),rgba(0, 0, 255, 0.418)),url(./../images/dr_Jenny.jpg);
+    background-image: linear-gradient(rgba(255, 0, 0, 0.421),rgba(0, 0, 255, 0.418)),url(./images/dr_Jenny.jpg);
     padding-top: 50px;
+   
     background-position: center;
    
 }    
@@ -175,21 +181,22 @@ section p{
 .round{
     display: flex;
    justify-content: space-around;
-   padding-top: 100px;
+   
+   padding-top: 200px;
    padding-bottom: 200px;
    font-size: 20px;
    /* padding-left: 50px;
    padding-right: 50px; */
+   
 }
 .round >div{
-    /* background-color: yellow; */
     border-radius: 50%;
     border: 15px solid white;
-    width: 250px;
-    height: 250px;
-    padding: 50px;
-    
-    /* display: flex; */
+    width: 200px;
+    height: 200px;
+    padding-top: 20px;
+   
+
    
 }
 .title-here{
@@ -198,7 +205,7 @@ section p{
     font-style: italic;
 }
 .title-here +p{
-    padding-top: 20px;
+    /* padding-top: 20px; */
     font-style: italic;
     font-variant: small-caps;
     font-weight: bold;
@@ -255,7 +262,6 @@ section p{
     background-color: yellowgreen;
     width: 250px;
     border-radius: 50px;
-    padding: 20px;
 
 }
 
@@ -280,9 +286,8 @@ section p{
     display: block;
 }
 .title-5{
-    text-transform:uppercase;
-    font-variant:small-caps;
-    font-family:serif;
+    text-transform: capitalize;
+    font-variant: small-caps;
 }
 .title-5 +p{
     font-variant: small-caps;
@@ -293,7 +298,6 @@ section p{
     background-color:yellowgreen;
     width: 250px;
     border-radius: 50px;
-    padding: 20px;
 
 }
 
@@ -353,7 +357,7 @@ section p{
 
 .sub-main-section-7{
     background-color: #009bff;
-    padding: 20px 50px;
+    padding-top: 20px;
     color: blue;
 }
 *{
@@ -375,16 +379,11 @@ flex-wrap: wrap;
 
  .full-paragraph .para{
     display: flex;
-    padding-left: 17px;
-    padding-right: 20px;
-    padding-bottom: 20px;
+   padding-bottom: 20px;
     padding-top: 20px;
     width: 50%;
     justify-content: center;
     align-items: center;
-}
-.span {
-    padding-left: 15px;
 }
 
     
@@ -399,7 +398,7 @@ flex-wrap: wrap;
 
 
 .section-8{
-    background-image:linear-gradient(rgba(0, 174, 255, 0.358),rgba(187, 255, 0, 0.438)),url(./../images/dr_Jenny.jpg);
+    background-image:linear-gradient(rgba(0, 174, 255, 0.358),rgba(187, 255, 0, 0.438)),url(./images/dr_Jenny.jpg);
     padding-top: 1px;
     background-position:  center;
    
@@ -410,7 +409,7 @@ flex-wrap: wrap;
     text-align: center;
     padding-bottom: 150px;
     padding-top: 450px;
-    padding-right: 45px;
+    text-align: center;
    
 }
 .elit{
@@ -430,34 +429,37 @@ flex-wrap: wrap;
 
 .footer{
     display: flex;
-    justify-content: center;
     background-color: black;
     color: white;
-    justify-content: space-between;
-    padding:25px 100px;
+    justify-content: space-around;
+     padding-top: 10px;
+    padding-bottom: 10px; 
+   
    
 }  
 
 
-.full-list .class{
+
+.full-list {
+
+    display: flex;
     font-size: large;
+}
+.full-list .class .uno{
+    padding-left: 0px;
     padding-right: 20px;
    
-   
-}
-
-.full-list{
-    display: flex;
-    align-items: center;
-   
     
-
+     
 }
+
 .header-foot{
 
    font-size: 15px;
+   text-align: center;
+   /* padding-top: 20px; */
 }
-.header-foot h1{
+.header-foot h2{
     font-style: italic;
     text-align: center;
 }
@@ -465,16 +467,11 @@ flex-wrap: wrap;
     display: block;
 }
 
-.full-list h3{
-    padding-left: 35px;
-}
-.uno li{
+
+.uno {
     font-size: 80%;
     list-style: none;
-    padding-left: 0px;
-}
-.other ul{
-    padding-bottom: 30px;
+   
 }
 
 
@@ -482,3 +479,86 @@ flex-wrap: wrap;
 
 
 
+
+
+@media(max-width:767px){
+
+.main-head{
+    flex-direction: column;
+}
+.hell{
+    text-align: center
+}
+.div .list li a{
+    text-align: center;
+    padding: 5px;
+}
+.trainer{
+    flex-direction: column;
+}
+
+
+.round{
+    flex-direction: column;
+    align-items: center;
+}
+.round >div{
+ margin-bottom: 50px;
+
+}
+
+
+
+.block-4 .title-para-4{
+     padding-bottom: 40px;
+     padding-left: 20px;
+}
+.block-5 .title-para-5{
+    padding-bottom: 40px;
+     padding-left: 20px;
+}
+
+
+
+
+
+.img{
+    width: 100%;
+}
+.block-6{
+    flex-direction: column;
+}
+
+/* .full-paragraph{
+    flex-direction: column;
+} */
+.full-paragraph .para{
+    display: inline;
+    text-align: center;
+    padding-bottom: 10px;
+}
+
+
+.para-head{
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.footer{
+    flex-direction: column;
+    
+}
+.full-list .class {
+       padding-left: 10px;
+}
+
+
+}
+
+
+
+
+@media(min-width:768px){
+     
+   
+}
