--- a/index.css
+++ b/index.css
@@ -2,11 +2,12 @@
     background-color: #0000ffb5;
     display: flex;
     justify-content: space-between;
+    padding-left: 5px;
+ 
   
-
-    /* background-image: linear-gradient( to right, yellow,green); */
-
-
+}
+body{
+    width:100%;
 }
 .list{
     display: flex;
@@ -481,17 +482,23 @@ flex-wrap: wrap;
 
 
 
-@media(max-width:767px){
+@media(max-width:800px){
 
 .main-head{
     flex-direction: column;
+    padding-top: 20px;
+    padding-right:5px;
+
+    /* padding-right: 20px; */
 }
 .hell{
-    text-align: center
+    text-align: center;
 }
 .div .list li a{
     text-align: center;
-    padding: 5px;
+    padding-left:0px;
+    padding-right: 5px;
+   
 }
 .trainer{
     flex-direction: column;
@@ -558,7 +565,7 @@ flex-wrap: wrap;
 
 
 
-@media(min-width:768px){
+@media(min-width:800px){
      
    
 }
