--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
     background-color: #0000ffb5;
     display: flex;
     justify-content: space-between;
-    padding-left: 5px;
+    /* padding-left: 5px; */
  
   
 }
@@ -487,7 +487,8 @@ flex-wrap: wrap;
 .main-head{
     flex-direction: column;
     padding-top: 20px;
-    padding-right:5px;
+        /* padding-right:20px; */
+        /* padding-left: 10px; */
 
     /* padding-right: 20px; */
 }
@@ -496,12 +497,16 @@ flex-wrap: wrap;
 }
 .div .list li a{
     text-align: center;
-    padding-left:0px;
-    padding-right: 5px;
+    padding-left:1px;
+    padding-right: 10px;
    
 }
 .trainer{
     flex-direction: column;
+}
+.trainer .train-img{
+ 
+ width: 100%;
 }
 
 
@@ -510,9 +515,8 @@ flex-wrap: wrap;
     align-items: center;
 }
 .round >div{
- margin-bottom: 50px;
-
-}
+ margin-bottom: 20px;
+ }
 
 
 
