--- a/index.css
+++ b/index.css
@@ -1,11 +1,14 @@
-.main-head{
+ .main-head{
     background-color: #0000ffb5;
     display: flex;
     justify-content: space-between;
+   
   
  
   
 }
+
+
 
 .list{
     display: flex;
@@ -14,7 +17,6 @@
 }
 .div .list li a{
     color: #FFF;
-    /* padding: 5px 20px; */
     text-decoration: none;
     padding: 15px;
    
@@ -41,8 +43,6 @@
     padding-bottom: 200px;
     text-align: center;
     color:white;
-    /* padding-right: 100px; */
-    /* padding-left:100px; */
     font-style: italic;
     font-variant: all-small-caps;
     font-family: cursive;
@@ -61,7 +61,7 @@ body{
     font-size:medium;
     font-weight: bold;
     margin: 0px;
-    /* background-color: rgba(0, 47, 255, 0.953); */
+
 }
 section button{
     background-color:red;
@@ -109,18 +109,7 @@ section p{
     padding-bottom: 150px;
  }         
 
- /* .train-1{
-    padding-top: 15px;
-    padding-bottom: 10px;
- } 
- .train-2{
-    padding-top: 15px;
-    padding-bottom: 10px;
- }     
- .train-3{
-    padding-top: 15px;
-    padding-bottom: 10px;
- }      */
+
 
 
  .trainer >div{
@@ -131,7 +120,9 @@ section p{
  .title-para{
     font-style: italic;
     text-transform: capitalize; 
+   
 }
+
 
 
 
@@ -152,28 +143,6 @@ section p{
     background-position: center;
    
 }    
-
-/* .pet-care{
-    background-color: yellow;
-    border: 5px solid black;
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-}  
-.outlet{
-    background-color: yellow;
-    border: 5px solid black;
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-}
-.pet-helping{
-    background-color: yellow;
-    border: 5px solid black;
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-} */
 
 
 
@@ -213,21 +182,8 @@ section p{
 
 
 
-/* @media(min-width:300px) and (max-width:600px){
-    body{
-        background-color: red;
-    }
-}
-@media(min-width:601px) and (max-width:800px){
-    body{
-        background-color: pink;
-    }
-}
-@media(min-width:800px) and (max-width:1000px){
-    body{
-        background-color: green;
-    }
-} */
+
+
 
 
 
@@ -235,9 +191,12 @@ section p{
                          /* section 4 */
 
 
+
+
 .section-4{
     background-color: rgba(95, 158, 160, 0.6);
     padding-top: 50px;
+    padding-bottom: 50px;
 
 }
 .block-4{
@@ -266,13 +225,18 @@ section p{
 
 
 
+
                     /* section-5 */
+
+
 
 
 .section-5{
     background-color: black;
     color: white;
     padding-top: 50px;
+    padding-bottom: 50px;
+    
     
 
 }                    
@@ -302,7 +266,11 @@ section p{
 
 
 
-                /* section-6 */
+
+             /******** section-6 ***************/
+
+
+
 .section-6{
     background-color:darkmagenta;
     padding-top: 50px;
@@ -324,34 +292,32 @@ section p{
     border-radius: 1px;
     background-color:blueviolet;
     color: black;
+    
     margin-left: 20px;
     margin-right: 20px;
     margin-bottom: 30px;
     padding-bottom: 50px;
     border: none;
     text-transform: uppercase;
-    
-    
-}        
-
-
-
-
-
-
-                /* section-7 */
-
-/* .section-7{
-    padding-top: 50px;
-    
+}     
+  
+.section-6 button{
+    background-color:red;
+    color: white;
+    font-size:x-large;
+    font-weight: bold;
+    border-radius:  50px;
+    padding: 10px;
+    border: none;
 }
-.title-7{
-    text-align: center;
-}      
-.block-7 >div{
-    display: flex;
-    padding: 100px;
-} */
+
+
+
+
+
+
+                   /********** section-7 ****************/
+
 
 
 .sub-main-section-7{
@@ -369,21 +335,31 @@ section p{
     display: block;
 
 }
-.full-paragraph{
+.full-paragraph {
     
 display: flex;
     
 flex-wrap: wrap;
-}
 
+padding-right: 50px;
+
+}
  .full-paragraph .para{
     display: flex;
    padding-bottom: 20px;
     padding-top: 20px;
-    width: 50%;
+    /* width: 50%; */
     justify-content: center;
     align-items: center;
+    
 }
+.full-paragraph .para img{
+   padding: 10px ;
+   
+}
+
+
+
 
     
 
@@ -420,7 +396,7 @@ flex-wrap: wrap;
 
 
 
-      /* section 9 */
+                   /* section 9 */
 
 
 
@@ -433,9 +409,10 @@ flex-wrap: wrap;
     justify-content: space-around;
      padding-top: 10px;
     padding-bottom: 10px; 
-   
-   
 }  
+.header-foot .fonts i{
+    padding:3px;
+}
 
 
 
@@ -456,7 +433,7 @@ flex-wrap: wrap;
 
    font-size: 15px;
    text-align: center;
-   /* padding-top: 20px; */
+  
 }
 .header-foot h2{
     font-style: italic;
@@ -471,35 +448,33 @@ flex-wrap: wrap;
     font-size: 80%;
     list-style: none;
    
-}
+} 
 
 
 
 
 
+                     /************* max-- **************/
 
 
-
-@media(max-width:800px){
+@media(max-width:767px){
 
 .main-head{
     flex-direction: column;
     padding-top: 20px;
-        /* padding-right:20px; */
-        /* padding-left: 10px; */
-
-    /* padding-right: 20px; */
+       
 }
 .hell{
     text-align: center;
 }
 .div .list li a{
     text-align: center;
-    padding-left: 0px;
+    padding-left: 2px;
     padding-right: 5px;
-   
-   
 }
+
+
+
 .trainer{
     flex-direction: column;
 }
@@ -507,6 +482,7 @@ flex-wrap: wrap;
  
  width: 100%;
 }
+
 
 
 .round{
@@ -519,10 +495,20 @@ flex-wrap: wrap;
 
 
 
+
+
 .block-4 .title-para-4{
      padding-bottom: 40px;
      padding-left: 20px;
      padding-right: 20px;
+}
+.img-1{
+    width: 100%;
+    padding-right: 30px;
+}
+.img-2{
+    width: 100%;
+    padding-left:30px;
 }
 .block-5 .title-para-5{
     padding-bottom: 40px;
@@ -538,34 +524,29 @@ flex-wrap: wrap;
 
 
 
-.img-1{
-    width: 100%;
-    padding-right:10px;
-}
-.img-2{
-    width: 100%;
-    padding-left:10px;
-}
+
+
+
+
+
 .block-6{
     flex-direction: column;
 }
 
-/* .full-paragraph{
-    flex-direction: column;
-} */
+
 .full-paragraph {
-    /* display: inline; */
+    
     flex-direction: column;
-    /* text-align: center; */
-    padding-bottom: 20px;
-    padding-left: 60px;
    
+    padding-bottom: 20px;
+   justify-content: center;
 }
+
 .header-7{
     padding: 20px;
 }
 .para .span{
-    padding-left: 20px;
+    padding-left: 0px;
     
 }
 
@@ -576,21 +557,465 @@ flex-wrap: wrap;
 }
 
 
+
+
+
+
 .footer{
     flex-direction: column;
     
 }
 .full-list .class {
+    padding-right: 5px;
+    padding-left: 20px;
+}
+
+
+}
+
+
+
+                 /*********** min start  ############################ */
+
+
+@media(min-width:768px){
+    .main-head{
+        background-color: #0000ffb5;
+        display: flex;
+        justify-content: space-between;
+    }
+    .list{
+        display: flex;
+        list-style: none;
+        
+    }
+    .div .list li a{
+        color: #FFF;
+        text-decoration: none;
+        padding: 15px;
+    }
+    .div{
+        align-items: center;
+        display: flex;
+    
+    }
+    .div button{
+        background-color: transparent;
+        border: none;
+    }
+    .main-body{
+        background-image: linear-gradient(rgb(0 157 255 / 0%),rgb(0 0 255 / 87%)),url(./images/banner_image.jpg);
+        background-position: center;
+        padding-top: 120px;
+        padding-bottom: 200px;
+        text-align: center;
+        color:white;
+        font-style: italic;
+        font-variant: all-small-caps;
+        font-family: cursive;
+        word-spacing: 20px;
+    }
+    .main-body .p-block{
+        display: block;
+    }
+    body{
+        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-size:medium;
+        font-weight: bold;
+        margin: 0px;
+    }
+    section button{
+        background-color:red;
+        color: white;
+        font-size:x-large;
+        font-weight: bold;
+        border-radius:  50px;
+        padding: 10px;
+        border: none;
+    }
+    section p{
+        font-size:medium;
+    }
+    
+    
+    
+    
+    
+            /* section 2 */
+    
+    
+    
+    
+    
+    .owner{
+        text-align: center;
+        background-color: rgba(100, 27, 0, 0.321);
+        padding-top: 20px;
+       }    
+    .head{
+        text-transform: capitalize;
+        font-weight: bold;
+        font-variant: small-caps;
+        padding-bottom: 25px;
+    }            
+    
+     .trainer{
+        display: flex;
+        padding-right: 50px;
+        padding-left: 50px;
+        font-style: italic;
+        text-transform: capitalize;
+        font-variant: small-caps;
+        padding-bottom: 150px;
+     }         
+    .trainer >div{
+        padding-top: 50px;
+        padding-bottom: 10px;
+     }    
+    
+     .title-para{
+        font-style: italic;
+        text-transform: capitalize; 
+       
+    }
+    
+    
+    
+    
+    
+    
+    
+            /********************* section 3 ***********/
+    
+    
+    
+    
+    
+    .full{
+        text-align: center;
+        background-image: linear-gradient(rgba(255, 0, 0, 0.421),rgba(0, 0, 255, 0.418)),url(./images/dr_Jenny.jpg);
+        padding-top: 50px;
+       
+        background-position: center;
+       
+    }    
+    .round{
+        display: flex;
+       justify-content: space-around;
+       
+       padding-top: 200px;
+       padding-bottom: 200px;
+       font-size: 20px;
+       
+    }
+    .round >div{
+        border-radius: 50%;
+        border: 15px solid white;
+        width: 200px;
+        height: 200px;
+        padding-top: 20px;
+       
+    
+       
+    }
+    .title-here{
+        font-weight: bold;
+        font-family: 'Courier New', Courier, monospace;
+        font-style: italic;
+    }
+    .title-here +p{
+        font-style: italic;
+        font-variant: small-caps;
+        font-weight: bold;
+        text-transform: capitalize;
+    }
+    
+    
+    
+    
+    
+    
+    
+    
+                             /************** section 4 ***************/
+    
+    
+    
+    
+    .section-4{
+        background-color: rgba(95, 158, 160, 0.6);
+        padding-top: 50px;
+        padding-bottom: 50px;
+    
+    }
+    .block-4{
+        display: flex;
+        justify-content: space-around;
+       
+    }
+    .span,.span-2{
+        display: block;
+    }
+    .title-4{
+        text-transform: capitalize;
+        font-variant: small-caps;
+    }
+    .title-4 +p{
+        font-variant: small-caps;
+        font-size: 25px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    .order-4{
+        background-color: yellowgreen;
+        width: 250px;
+        border-radius: 50px;
+    
+    }
+    
+    
+    
+    
+                        /**************** section-5 *****************/
+    
+    
+    
+    
+    .section-5{
+        background-color: black;
+        color: white;
+        padding-top: 50px;
+        padding-bottom: 50px;
+        
+    
+    }                    
+    .block-5{
+        display: flex;
+        justify-content: space-around;
+        flex-direction: row-reverse;
+    }
+    .span-5,.spans-5{
+        display: block;
+    }
+    .title-5{
+        text-transform: capitalize;
+        font-variant: small-caps;
+    }
+    .title-5 +p{
+        font-variant: small-caps;
+        font-size: 25px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    .order-5{
+        background-color:yellowgreen;
+        width: 250px;
+        border-radius: 50px;
+    
+    }
+    
+    
+    
+    
+                 /************* section-6 *****************/
+    
+    
+    
+    .section-6{
+        background-color:darkmagenta;
+        padding-top: 50px;
+    }
+    
+    .title-6{
+        text-align: center;
+        padding-bottom: 40px;
+        text-transform: capitalize;
+    
+    }                
+    
+    .block-6{
+        display: flex;
+        text-align: center;
+    }   
+    .block-6 >div{
+        border: 5px solid black;
+        border-radius: 1px;
+        background-color:blueviolet;
+        color: black;
+        
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 30px;
+        padding-bottom: 50px;
+        border: none;
+        text-transform: uppercase;
+    }     
+      
+    .section-6 button{
+        background-color:red;
+        color: white;
+        font-size:x-large;
+        font-weight: bold;
+        border-radius:  50px;
+        padding: 10px;
+        border: none;
+    }
+    
+    
+    
+    
+    
+    
+                       /*************** section-7 *************/
+    
+
+    
+    
+    .sub-main-section-7{
+        background-color: #009bff;
+        padding-top: 20px;
+        color: blue;
+    }
+    *{
+        box-sizing: border-box;
+    }
+    .header-7{
+        text-align: center;
+    }
+    .span1{
+        display: block;
+    
+    }
+    .full-paragraph{
+        
+    display: flex;
+        
+    flex-wrap: wrap;
+    }
+    
+     .full-paragraph .para{
+        display: flex;
+       padding-bottom: 20px;
+        padding-top: 20px;
+        width: 50%;
+        justify-content: center;
+        align-items: center;
+        
+    }
+    .full-paragraph .para img{
+       padding:10px;
+    }
+    
+    
+        
+    
+    
+    
+    
+                         /******** section 8 *****/
+    
+    
+    
+    
+    
+    .section-8{
+        background-image:linear-gradient(rgba(0, 174, 255, 0.358),rgba(187, 255, 0, 0.438)),url(./images/dr_Jenny.jpg);
+        padding-top: 1px;
+        background-position:center;
+       
+    
+    
+    }                     
+    .para-head{
+        text-align: center;
+        padding-bottom: 150px;
+        padding-top: 450px;
+        text-align: center;
+       
+    }
+    .elit{
+        display: block;
+    }
+    
+    
+    
+    
+    
+    
+                       /* section 9 */
+    
+    
+    
+    
+    
+    .footer{
+        display: flex;
+        background-color: black;
+        color: white;
+        justify-content: space-around;
+         padding-top: 10px;
+        padding-bottom: 10px;    
+    }  
+    .full-list {
+    
+        display: flex;
+        font-size: large;
+    }
+     .full-list .class .uno{
+        padding-left: 1px;
+       padding-right: 20px;
+    }
+    .header-foot{
+    
+       font-size: 15px;
+       text-align: center;
+    }
+    .header-foot h2{
+        font-style: italic;
+        text-align: center;
+    }
+    .span{
+        display: block;
+    }
+    
+    
+    .uno {
+        font-size: 80%;
+        list-style: none;
+       
+    }
+   
+}
+
+
+
+
+
+/***************************** Tab css start #################################*/
+
+
+
+@media (min-width:768px) and (max-width:991px){
+.trainer {
+flex-direction: column;
+}
+
+.block-4 .title-para-4{
+    padding-left: 10px;
+}
+.img-1{
+    padding-right: 10px;
+}
+
+ .title-para-5{
+    padding-right: 10px;
+}
+.img-2{
+    padding-left: 10px;
     
 }
 
-
+.block-6 >div{
+    padding: 10px;
 }
 
-
-
-
-@media(min-width:800px){
-     
-   
 }
+/* *****************************Tab css end -------------------------------------
