--- a/index.css
+++ b/index.css
@@ -1005,8 +1005,8 @@ flex-direction: column;
     padding-right: 10px;
 }
 
- .title-para-5{
-    padding-right: 10px;
+.block-5 .title-para-5{
+    padding-left: 10px;
 }
 .img-2{
     padding-left: 10px;
