--- a/index.css
+++ b/index.css
@@ -213,7 +213,7 @@ section p{
 }
 .title-4 +p{
     font-variant: small-caps;
-    font-size: 25px;
+    /* font-size: 25px; */
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .order-4{
@@ -254,7 +254,7 @@ section p{
 }
 .title-5 +p{
     font-variant: small-caps;
-    font-size: 25px;
+    /* font-size: 25px; */
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .order-5{
@@ -456,6 +456,8 @@ padding-right: 50px;
 
                      /************* max-- **************/
 
+                     /* ******mobile******** */
+
 
 @media(max-width:767px){
 
@@ -468,11 +470,12 @@ padding-right: 50px;
     text-align: center;
 }
 .div .list li a{
-    text-align: center;
-    padding-left: 2px;
+    padding-left:0px;
     padding-right: 5px;
 }
-
+.div button{
+    padding-left: 2px;
+}
 
 
 .trainer{
@@ -567,7 +570,7 @@ padding-right: 50px;
 }
 .full-list .class {
     padding-right: 5px;
-    padding-left: 20px;
+    padding-left: 10px;
 }
 
 
@@ -577,16 +580,20 @@ padding-right: 50px;
 
                  /*********** min start  ############################ */
 
+                 /************ desktop **************/
+
 
 @media(min-width:768px){
     .main-head{
         background-color: #0000ffb5;
         display: flex;
         justify-content: space-between;
+        
     }
     .list{
         display: flex;
         list-style: none;
+        
         
     }
     .div .list li a{
@@ -1019,3 +1026,51 @@ flex-direction: column;
 
 }
 /* *****************************Tab css end -------------------------------------
+
+
+                /************** galaxy-fold *************/
+
+@media  (max-width:280px){
+    .div .list{
+        padding-left: 10px;
+        font-size: small;
+    }
+    .img-1{
+        width: 100px;
+        position: absolute;
+        right: 10px;
+    }
+    .img-2{
+        width: 100px;
+        position: absolute;
+        right: 50px;
+    }
+    .full-list .class{
+       padding-left: 5px;
+       
+        font-size: small;
+    }
+    .main-body p{
+           font-size: x-small;
+           padding: 10px;
+    }
+    .title-6{
+        padding: 20px;
+    }
+}
+
+
+
+                        /******** surface:duo *******/
+
+                        
+
+    @media (min-width:540px) and (max-width:540px){
+        .div .list li{
+            padding-left: 30px;
+        }
+        .full-list .class{
+            padding-left: 50px;
+        }
+    }
+ 
