--- a/index.css
+++ b/index.css
@@ -521,8 +521,8 @@ flex-wrap: wrap;
     flex-direction: column;
     padding-top: 20px;
     padding-bottom: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
+    /* padding-left: 20px; */
+    /* padding-right: 20px; */
 }
 .main-body{
     padding-top: 100px;
@@ -530,9 +530,10 @@ flex-wrap: wrap;
 }
 .div .list{
     padding-left: 10px;
-   
+
     
 }
+
 .main-body p{
     font-size: small;
 }
