--- a/index.css
+++ b/index.css
@@ -521,15 +521,18 @@ flex-wrap: wrap;
     flex-direction: column;
     padding-top: 20px;
     padding-bottom: 20px;
-    /* padding-left: 20px; */
-    /* padding-right: 20px; */
+    padding-left: 5px;
+    padding-right: 5px;
 }
 .main-body{
     padding-top: 100px;
     padding-bottom: 100px;
 }
 .div .list{
+    /* text-align: center; */
     padding-left: 10px;
+    padding-right: 10px;
+    
 
     
 }
@@ -542,13 +545,13 @@ flex-wrap: wrap;
     text-align: center;
 }
 .div .list li a{
+    /* text-align: center; */
 
-    padding-left:0px;
+    padding-right:0px;
+    padding-left: 10px;
 }
 
-.div button{
-    padding-left:0px;
-}
+
 .owner .title-para{
     font-size: medium;
    
