--- a/html_conversion/index.css
+++ b/html_conversion/index.css
@@ -186,11 +186,8 @@ section p{
     width: 200px;
     height: 200px;
     padding-top: 20px;
-   
-   
-
-   
 }
+
 .title-here{
     font-weight: bold;
     font-family: 'Courier New', Courier, monospace;
@@ -205,14 +202,7 @@ section p{
 }
 
 
-
-
-
-
-
-
-
-                         /* section 4 */
+                        /* section 4 */
 
 
 
@@ -708,12 +698,14 @@ flex-wrap: wrap;
 .full-list{
     flex-direction: column;
    
-    font-size: 40px;
+    /* font-size: 40px; */
     padding-left: 20px;
     padding-right: 20px;
 }
 
-
+.full-list .class h3{
+    font-size: 50px;
+}
 
 
 }
@@ -1188,6 +1180,9 @@ padding:3px;
 display: flex;
 font-size: 40px;
 
+}
+.full-list .class h3{
+    font-size: 50px;
 }
 
 
