--- a/index.css
+++ b/index.css
@@ -1,6 +1,10 @@
 body{
     background-color: blueviolet;
 }
+.container_css2  > a{
+    padding: 50px;
+    font-size: xx-large;
+}
 
 
 
@@ -8,17 +12,37 @@ body{
 
 
     .container_css1{
-        margin-top: 10px;
+      
       text-align: center;
-      /* margin-left: 1px; ; */
-      /* margin-right: 2px;  */
-        
-        
+      
     }
 
     .container_css2 > a{
             
-        margin-top: 10px;
+        margin-top: 20px;
+        padding: 50px;
+        font-size: medium;
+
         
     }
 }
+
+                                    /* tab i pad air */
+@media (min-width:768px) and (max-width:991px){
+    .container_css2{
+       display: flex;
+    }
+}
+
+                            /* laptop */
+
+@media(min-width:768px){
+    body{
+    background-color: blueviolet;
+}
+.container_css2  > a{
+    padding: 50px;
+    font-size: xx-large;
+}
+
+}                            
