added github profile properties

--- a/github_profile_search/github_search.css
+++ b/github_profile_search/github_search.css
@@ -6,7 +6,7 @@ background-color: rgba(27, 84, 255, 0.96);
     color: white;
     font-size: xx-large;
  
-    font-style: italic;
+    font-style:normal;
     font-family: 'Times New Roman', Times, serif;
     
     
