--- a/index.css
+++ b/index.css
@@ -1,48 +1,99 @@
 body{
     background-color: blueviolet;
+    background-image: url(./html_conversion/images/back_3.jpg);
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-variant: small-caps;
+    /* background-repeat: no-repeat; */
+    /* background-position: center; */
+    /* margin-bottom: 600px; */
+    
+  
 }
 .container_css2  > a{
     padding: 50px;
-    font-size: xx-large;
+    font-size: 50px;
+}
+.click-above{
+    background-image: url(./html_conversion/images/link.jpg);
+    padding: 5px;
+    border-radius: 50px;
+    width: 50%;
+    position: absolute;
+    top: 500px;
+    left: 500px;
+    font-size: 50px;
+
 }
 
 
+ /* i phone */
 
 @media(max-width:767px){
 
-
-    .container_css1{
-      
-      text-align: center;
-      
-    }
-
-    .container_css2 > a{
+.container_css2 > a{
             
-        margin-top: 20px;
-        padding: 50px;
-        font-size: medium;
+    margin-top: 20px;
+    padding: 50px;
+    font-size: xx-large;
 
-        
-    }
 }
+
+}
+
 
                                     /* tab i pad air */
 @media (min-width:768px) and (max-width:991px){
+
     .container_css2{
        display: flex;
     }
+   
+    
+    
+  
 }
+
+        /* galaxy fold */
+
+@media(min-width:280px){
+
+.container_css2 > a{
+    font-size:medium;
+}
+.click-above{
+    top: 400px;
+    left:60px;
+    font-size: medium;
+}
+}   
 
                             /* laptop */
 
 @media(min-width:768px){
-    body{
-    background-color: blueviolet;
-}
+  
 .container_css2  > a{
     padding: 50px;
-    font-size: xx-large;
+    font-size: 50px;
+}
+.click-above{
+    background-image: url(./html_conversion/images/link.jpg);
+    padding: 5px;
+    border-radius: 50px;
+    width: 50%;
+    position: absolute;
+    top: 500px;
+    left: 500px;
+    font-size: 50px;
 }
 
 }                            
+
+/* nest hub */
+
+@media (min-width:1024px){
+.click-above{
+    left: 250px;
+    top: 400px;
+}
+}
+    
