--- a/github_profile_search/github_search.css
+++ b/github_profile_search/github_search.css
@@ -1,65 +1,63 @@
 body{
-background-color: rgba(27, 84, 255, 0.96);
+
+background-image: url(../html_conversion/images/git.jpg);
 }
 
 .myclass-1{
-    color: white;
+    color:white;
     font-size: xx-large;
- 
     font-style:normal;
-    font-family: 'Times New Roman', Times, serif;
-    
-    
+    font-family:Verdana, Geneva, Tahoma, sans-serif ;
+    background-image: url(../html_conversion/images/lap.jpg);
+    background-position: center;
+
 }
 button:hover{
-    background-color:black;
-    color: white;
+    background-color:rgba(0, 0, 255, 0.45);
     border: none;
-    
-    
 }
 input{
     font-size: xx-large;
     border: none;
+    border-radius: 100px;
 }
+
 
 
                             /* i phone 12 pro */
 @media(max-width:767px){
     .myclass-1{
-        font-size: medium;
+        font-size: small;
     }
     .search_1{
         font-size:medium;
     }
+    
 }
 
 
 
 
 @media(min-width:768){
-body{
-    background-color: rgba(27, 84, 255, 0.96);
-    }
+
     
     .myclass-1{
-        color: white;
+        color:white;
         font-size: xx-large;
-     
-        font-style: italic;
-        font-family: 'Times New Roman', Times, serif;
-        
-        
+        font-style:normal;
+        font-family:Verdana, Geneva, Tahoma, sans-serif ;
+        background-image: url(../html_conversion/images/lap.jpg);
+        background-position: center;
+    
     }
     button:hover{
-        background-color:black;
-        color: white;
+        background-color:rgba(0, 0, 255, 0.45);
+       
         border: none;
-        
-        
     }
     input{
         font-size: xx-large;
         border: none;
+        border-radius: 100px;
     }
 }
