--- a/html_conversion/index.css
+++ b/html_conversion/index.css
@@ -527,8 +527,8 @@ flex-wrap: wrap;
 }
 .div .list{
     
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
     font-size:small;
     
 
@@ -1273,11 +1273,15 @@ flex-direction: column;
     flex-direction: column;
     padding: 20px;
 }
-.full-list .class{
+.full-list{
     padding: 5px;
+}
+.full-list .class{
+    padding-left: 50px;
     font-size: xx-large;
 
 }
+
 
 
 }
@@ -1401,25 +1405,9 @@ flex-direction: column;
         padding-right: 5px;
         }
         .div .list{
-            padding-left: 5px;
-            padding-right: 5px;
-            
-
-          
-        }
+            padding-left: 10px;
+            padding-right:10px;
+            }
     }    
 
 
-                /* realme narz0 */
-
-    @media(min-width:541px) and (max-width:768px){
-
-        .div .list{
-            padding-left: 50px;
-        }
-    }
-    @media(min-width:460px) and (max-width:768px){
-        .div .list{
-            padding-left: 50px;
-        }
-    }
